manifests/overlays/dev/deployment-patch.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: samplejava
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samplejava
  template:
    metadata:
      labels:
        app: samplejava
    spec:
      containers:
        - name: samplejava
          image: ktdseduacr.azurecr.io/edu30/samplejava:v1.0.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "250m"
